# Solr

./: .gitignore  CMakeLists.txt  main.c
include/: solr.h
include/solr/: class.h  common.h  function.h  gc.h  method.h  object.h  opcode.h  vm.h
src/: class.c  function.c  gc.c  method.c  murmur.c  object.c  symbol.c  vm.c
